# seo-mcp-poc

./: .gitignore  README.md  app.ipynb  app.py  cluade.json  command.md  data_json.ipynb  pyproject.toml  requirements.txt  seo_system_prompt.py  test.md  test.py  test_mcp_dynamic.ipynb  tools.csv  tools.md
logs/: backlinks_anchors.json  backlinks_backlinks.json  backlinks_competitors.json  backlinks_competitors.md  backlinks_domain_pages.json  backlinks_domain_pages_summary.json  backlinks_referring_domains.json  backlinks_summary.json  backlinks_summary.md  dataforseo_labs_google_competitors_domain.json  dataforseo_labs_google_competitors_domain.md  dataforseo_labs_google_domain_intersection.json  dataforseo_labs_google_domain_rank_overview.json  dataforseo_labs_google_domain_rank_overview.md  dataforseo_labs_google_historical_rank_overview.json  dataforseo_labs_google_keywords_for_site.json  dataforseo_labs_google_keywords_for_site.md  dataforseo_labs_google_ranked_keywords.json  dataforseo_labs_google_ranked_keywords.md  dataforseo_labs_google_relevant_pages.json  dataforseo_labs_google_relevant_pages.md  dataforseo_labs_google_subdomains.json  on_page_content_parsing.md  on_page_lighthouse.json  on_page_lighthouse.md  on_page_lighthouse_summary.json
src/: sample.ipynb  sample.py
src/agents/: seo_agent.py
src/instructions/: seo_agent_instruction.py
src/middleware/: __init__.py  log_llm_usage.py  tool_error_handler.py
src/tools/: gsc_server.py
src/ui/: app_ui.py
src/utils/: config.py  lighthouse_transformer.py  llm_utils.py  token_counter.py  (+2 more)
